# azure-cost-agent

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  agent.yaml  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-container-app.yml  deploy-foundry-agent.yml
docs/: getting-started.md
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend-chainlit/: Dockerfile  app.py
frontend-chainlit/.chainlit/: config.toml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/copilotkit/: route.ts
infra/: README.md
infra/container-app/: .terraform.lock.hcl  main.tf
infra/foundation/: .terraform.lock.hcl
infra/foundry-agent/: README.md
src/: a2a_server.py  app.py  azure_clients.py  cli.py  config.py  factory.py  graph.py  main.py  mcp.py  memory.py  middleware.py  pricing.py  workflow.py
src/agents/: _context.py  advisor.py  anomaly_detector.py  budget_tracker.py  cost_analyzer.py  reporter.py  tag_analyzer.py  waste_detector.py
tests/: test_advisor.py  test_anomaly_detector.py  test_cost_analyzer.py  test_factory.py  test_middleware.py  test_tag_analyzer.py  test_waste_detector.py
